--- a/css/style.css
+++ b/css/style.css
@@ -11,18 +11,18 @@ td {
   border-radius: 8px;
 }
 
-td:nth-last-child(1)  {
+td:nth-last-child(1) ,tr:nth-last-child(3) :nth-child(16) {
     background-color: violet;
 }
-td:nth-last-child(2)  {
+td:nth-last-child(2) ,tr:nth-last-child(3) :nth-child(15) {
     background-color: orange;
 }
 
 tr:nth-child(1) :nth-child(1) {
   background-color: yellow;
 }
-td:nth-child(1) {
-  background-color: gray;
+td:nth-child(1) ,tr:nth-child(7) :nth-child(17){
+  background-color:cornflowerblue ;
 }
 td:nth-child(2) {
   background-color: moccasin;
@@ -30,19 +30,24 @@ td:nth-child(2) {
 tr:nth-child(8) :nth-child(n + 2) ,tr:nth-child(6) :nth-child(3){
   background-color: lightblue;
 }
-tr:nth-child(9) :nth-child(n + 1),tr:nth-child(7) :nth-child(3) {
+tr:nth-child(9) :nth-child(n + 2),tr:nth-child(7) :nth-child(3) {
   background-color: lightseagreen;
 }
-tr:nth-child(9) :nth-child(1),
-tr:nth-child(8) :nth-child(1),
 
-tr:nth-child(8) :nth-child(n + 16),
-tr:nth-child(9) :nth-child(n + 16)
- {
-  background-color: transparent;
-  border: none;
-}
 td:nth-child(3),td:nth-child(4),td:nth-child(5),td:nth-child(6),td:nth-child(7),td:nth-child(8),td:nth-child(9),td:nth-child(10),td:nth-child(11),td:nth-child(12){ 
     background-color: green;
   }
-
+td:nth-last-child(3) ,td:nth-last-child(4) ,tr:nth-child(2) :nth-child(14){
+    background-color: yellow;
+} 
+td:nth-last-child(6),td:nth-last-child(5) ,tr:nth-child(6) :nth-child(15){
+    background-color: pink;
+}
+td:empty ,tr:nth-child(8) :nth-child(n + 16),
+tr:nth-child(9) :nth-child(n + 16){
+    background-color: transparent;
+    border: none;
+}
+tr:nth-child(2) :nth-child(13) , tr:nth-child(3) :nth-child(14),tr:nth-child(4) :nth-child(14) ,tr:nth-child(4) :nth-child(15),tr:nth-child(5) :nth-child(15),tr:nth-child(5) :nth-child(16),tr:nth-child(6) :nth-child(16) {
+    background-color: tomato;
+}
