--- a/css/style.css
+++ b/css/style.css
@@ -1,14 +1,17 @@
 table {
   text-align: center;
-  padding: 7%;
+  margin: 3rem auto;
   background-color: white;
 }
 td {
   border: black 1px solid;
   background-color: white;
-  width: 6rem;
-  height: 6rem;
+  width: 5rem;
+  height: 5rem;
   border-radius: 8px;
+}
+td:hover {
+  transform: scale(2);
 }
 
 td:nth-last-child(1) ,tr:nth-last-child(3) :nth-child(16) {
